--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>COG</head>
+    <head>
+        <title>COG</title>
+    </head>
     <body>
         Hello.
     </body>
