--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>window.location.replace("cosmic-olympian-guild.github.io");</script>
+        <script>window.location.replace("./");</script>
     </head>
 </html>
