links to Engine bot

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>COG</title>
     </head>
     <body>
-        Hello.
+        Check out <a href="./site/index.html">Engine bot</a>
     </body>
 </html>
