--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>COG</title>
     </head>
     <body>
+        <img style="position: relative; width: 20%; height: auto;" src="https://cdn.discordapp.com/attachments/694630175417040937/1091009706157424680/COGdev.jpeg" alt="">
+        <h1>This is the Cosmic Olympian Guild Developers website (We call it COG devs)</h1>
         Check out <a href="./Engine-bot website/index.html">Engine bot</a>
     </body>
 </html>
