--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <h1 style="display: inline; padding: 2%; top: -2em; position: relative;">This is the <span style="color: rgb(190,74,119)">Cosmic Olympian Guild Developers</span> website <span style="font-size: medium;">We just call it <span style="color: rgb(188, 39, 99)">COG devs</span></span></h1>
             
     </div>
-    <ul><li>Check out <a href="./Engine-bot website/index.html">Engine bot</a></li>
-        <li>Check out <a href="./Engine-bot website/index.html"></a></li>
+    <ul><li>Check out <a href="https://cogdevs.github.io/Engine-Bot/">Engine bot</a></li>
+        <li>Check out <a href="https://cogdevs.github.io/Sractch-js-fixes-demo/"></a></li>
     </ul>
     </body>
 </html>
