--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             
     </div>
     <ul><li>Check out <a href="https://cogdevs.github.io/Engine-Bot/">Engine bot</a></li>
-        <li>Check out <a href="https://cogdevs.github.io/Sractch-js-fixes-demo/"></a></li>
+        <li>Check out <a href="https://cogdevs.github.io/Sractch-js-fixes-demo/">Scratch-js demo</a></li>
     </ul>
     </body>
 </html>
