Fix alignment and add content

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>COG</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/694630175417040937/1091009706157424680/COGdev.jpeg" type="image/x-icon">
-    </head>
-    <body>
-        <div class="topbar">
-            <img style="width: 8em; height: auto; border-radius: 30px;" src="https://cdn.discordapp.com/attachments/694630175417040937/1091009706157424680/COGdev.jpeg" alt="">
-            <h1 style="display: inline; padding: 2%; top: -2em; position: relative;">This is the <span style="color: rgb(190,74,119)">Cosmic Olympian Guild Developers</span> website <span style="font-size: medium;">We just call it <span style="color: rgb(188, 39, 99)">COG devs</span></span></h1>
-            
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/index.css">
+    <title>⚙️ COG Devs</title>
+</head>
+<body>
+    <div class="topbar">
+        <img src="assets/COGdev.jpeg" id="logoimg" width="15%" height="auto">
+        <h1>This is the <span style="">Cosmic Olympian Guild Developers</span> website</h1>
+        <h2>We just call it <span style="color: rgb(188, 39, 99)">COG Devs</span></h2>
     </div>
-    <ul><li>Check out <a href="https://cogdevs.github.io/Engine-Bot/">Engine bot</a></li>
-        <li>Check out <a href="https://cogdevs.github.io/Sractch-js-fixes-demo/">Scratch-js demo</a></li>
-    </ul>
-    </body>
+    <div id="project-list">
+        <div class="project">
+            <h2>Engine Bot</h2>
+            <p>A multipurpose Discord Bot.</p>
+            <a href="https://github.com/cogdevs/Engine-Bot"><button>Learn More</button></a>
+        </div>
+        <div class="project">
+            <h2>Sractch js fixes demo</h2>
+            <p>Check it out!</p>
+            <a href="https://github.com/cogdevs/Sractch-js-fixes-demo"><button>Learn More</button></a>
+        </div>
+    </div>
+</body>
 </html>
