We stand with Israel 🇮🇱

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/index.css">
     <title>⚙️ COG Devs</title>
+    <script id="stand-with-israel-widget" async="true" src="https://westandwithisrael.io/_functions/widget?position=bottom-right&layout=1"></script>
 </head>
 <body>
     <div class="topbar">
